--- a/small_example/MySmall/build.gradle
+++ b/small_example/MySmall/build.gradle
@@ -26,5 +26,6 @@ task clean(type: Delete) {
 
 apply plugin: 'net.wequick.small'
 small {
+    aarVersion = '0.9.0'
     strictSplitResources = false
 }
