--- a/small_example/MySmall/app/src/main/AndroidManifest.xml
+++ b/small_example/MySmall/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name="com.example.mysmall.app.test.MyReceiver">
+            <intent-filter>
+                <action android:name="MyReceiver123" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
