--- a/small_example/MySmall/app.test/build.gradle
+++ b/small_example/MySmall/app.test/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.mysmall.app.test"
-        minSdkVersion 19
+        minSdkVersion 22
         targetSdkVersion 23
         versionCode 5
         versionName "5.0"
@@ -19,8 +19,15 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile(name:'mylib-debug', ext:'aar')
 }
