--- a/small_example/MySmall/lib.utils/build.gradle
+++ b/small_example/MySmall/lib.utils/build.gradle
@@ -1,15 +1,14 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.example.mysmall.app.test"
         minSdkVersion 22
         targetSdkVersion 23
-        versionCode 5
-        versionName "5.0"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -19,15 +18,9 @@ android {
     }
 }
 
-repositories {
-    flatDir {
-        dirs 'libs'
-    }
-}
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile(name:'mylib-debug', ext:'aar')
+    compile project(':mylib')
 }
